# openai_trtllm

./: .dockerignore  .gitattributes  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
client/: langchain_chat_openai.py  langchain_openai.py  openai_completion.py  openai_completion_stream.py  requirements.txt
example/: history_template.liquid  history_template_baichuan.liquid  history_template_llama3.liquid
models/baichuan/ensemble/: config.pbtxt
models/baichuan/postprocessing/: config.pbtxt
models/baichuan/postprocessing/1/: model.py
models/baichuan/preprocessing/: config.pbtxt
models/baichuan/preprocessing/1/: model.py
models/baichuan/tensorrt_llm/: config.pbtxt
src/: config.rs  error.rs  lib.rs  main.rs  startup.rs  state.rs  telemetry.rs  utils.rs
src/history/: mod.rs
src/routes/: chat.rs  completions.rs  health_check.rs  mod.rs
src/triton/: mod.rs  request.rs  telemetry.rs
templates/: history_template_baichuan.liquid  history_template_custom_roles.liquid
