[package]
name = "openai_trtllm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.7", features = ["derive"]}
figment = { version = "0.10.12", features = ["env"] }
serde = { version = "1.0.190", features = ["derive"] }
axum = "0.6.20"
hyper = "0.14.27"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "time"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-opentelemetry = "0.21.0"
opentelemetry = { version = "0.20.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = "0.13.0"
opentelemetry-jaeger = "0.19.0"
axum-tracing-opentelemetry = "0.14.1"
axum-prometheus = "0.4.0"
