[package]
name = "openai_trtllm"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
tokio = { version = "1.33.0", features = ["full"] }
async-stream = "0.3.5"
tonic = "0.10.2"
prost = "0.12.1"
prost-types = "0.12.1"
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.7", features = ["derive"] }
figment = { version = "0.10.12", features = ["env"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
tracing-opentelemetry = { version = "0.22" }
tower-http = { version = "0.5", features = ["trace"] }
opentelemetry = { version = "0.21.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics", "logs"]  }
opentelemetry-semantic-conventions = { version = "0.13.0" }
axum-tracing-opentelemetry = "0.16.0"
liquid = "0.26.4"

[build-dependencies]
anyhow = "1.0.75"
tonic-build = "0.10.2"
walkdir = "2.4.0"
